basic interface with toast messaging

--- a/app/src/main/res/layout/fragment_scrollable_graph.xml
+++ b/app/src/main/res/layout/fragment_scrollable_graph.xml
@@ -17,12 +17,128 @@
         android:useDefaultMargins="true"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UselessParent">
 
         <TextView
             style="@style/Thumbnails"
             android:background="@drawable/one" />
 
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/two"
+            />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/four" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/five" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/six" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/two"
+            />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/four" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/five" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/six" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/one" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/two"
+            />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/three" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/four" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/five" />
+
+        <TextView
+            style="@style/Thumbnails"
+            android:background="@drawable/six" />
         <TextView
             style="@style/Thumbnails"
             android:background="@drawable/two"
