--- a/app/src/main/res/layout/activity_add_picture.xml
+++ b/app/src/main/res/layout/activity_add_picture.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SlideshowListActivity">
+    tools:context=".AddPictureActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
-        android:text="BUILDME:  Clickable list of slideshow from database"
+        android:layout_marginTop="75dp"
+        android:text="BUILDME: Render an interface for picture uploads."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
