--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,8 +13,18 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
     <style name="Thumbnails">
         <item name="android:layout_height">50dp</item>
         <item name="android:layout_width">50dp</item>
     </style>
+
+    <style name="Theme.StoryTeller.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.StoryTeller.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.StoryTeller.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
